# Lime

./: .dockerignore  .gitignore  MANIFEST.in  README.md  manage.py  plugin.Jenkinsfile  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
frontend/: .dockerignore  .editorconfig  .gitignore  .npmignore  Dockerfile  README.md  lwc.config.json  package-lock.json  package.json  stencil.config.dist.ts  stencil.config.ts
frontend/src/: interface.d.ts  lime-web-component-platform.browser.js
frontend/src/components/lwc-limepkg-gorilla-component/: lwc-limepkg-gorilla-component.scss  lwc-limepkg-gorilla-component.tsx
frontend/src/components/lwc-limepkg-my-test-hello-world/: lwc-limepkg-my-test-hello-world.e2e.tsx  lwc-limepkg-my-test-hello-world.scss  lwc-limepkg-my-test-hello-world.spec.tsx  lwc-limepkg-my-test-hello-world.tsx
frontend/src/components/lwc-limepkg-my-test-loader/: lwc-limepkg-my-test-loader.tsx
frontend/src/components/lwc-test-webcomponent-hello-world/: lwc-test-webcomponent-hello-world.e2e.tsx  lwc-test-webcomponent-hello-world.spec.tsx  lwc-test-webcomponent-hello-world.tsx
frontend/src/components/lwc-test-webcomponent-loader/: lwc-test-webcomponent-loader.tsx
limepkg_my_test/: __init__.py
limepkg_sprint/: __init__.py  conftest.py
limepkg_sprint/endpoints/: __init__.py  endpoint.py  endpoint_test.py
limepkg_sprint/querys/: querys.py
test_webcomponent/: __init__.py
test_webcomponent/web_components/: __init__.py  web_components_test.py
